// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logomark component should render a second color correctly 1`] = `
<span
  class="Logomark"
>
  <span
    class="Logomark-inner"
  >
    <svg
      aria-hidden="true"
      class="Logomark-svg"
      viewBox="0 0 2048 2048"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M485.378 1921.317h1078.004v126.796H485.378zM1562.641 253.22v1541.238H485.368V253.227H1562.64zm-153.889 1387.632V406.852H1281.94l-258.81 615.277-258.78-615.277H639.257v1234.001h128.51V705.06l3.447-3.385 251.915 604.963 253.665-604.963h3.427v939.178h128.541z"
        fill="currentColor"
      />
      <path
        d="M767.766 1640.847h-128.51V406.846H764.35l258.78 615.283 258.8-615.283h126.822v1234h-128.54V701.67h-3.428l-253.655 604.97-251.925-604.97-3.448 3.385v935.793z"
        fill="#00aeef"
      />
    </svg>
  </span>
</span>
`;

exports[`Logomark component should render a title correctly 1`] = `
<span
  class="Logomark"
>
  <span
    class="Logomark-inner"
  >
    <svg
      aria-label="Title"
      class="Logomark-svg"
      role="img"
      viewBox="0 0 2048 2048"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M485.378 1921.317h1078.004v126.796H485.378zM1562.641 253.22v1541.238H485.368V253.227H1562.64zm-153.889 1387.632V406.852H1281.94l-258.81 615.277-258.78-615.277H639.257v1234.001h128.51V705.06l3.447-3.385 251.915 604.963 253.665-604.963h3.427v939.178h128.541z"
        fill="currentColor"
      />
    </svg>
  </span>
</span>
`;

exports[`Logomark component should render correctly 1`] = `
<span
  class="Logomark"
>
  <span
    class="Logomark-inner"
  >
    <svg
      aria-hidden="true"
      class="Logomark-svg"
      viewBox="0 0 2048 2048"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M485.378 1921.317h1078.004v126.796H485.378zM1562.641 253.22v1541.238H485.368V253.227H1562.64zm-153.889 1387.632V406.852H1281.94l-258.81 615.277-258.78-615.277H639.257v1234.001h128.51V705.06l3.447-3.385 251.915 604.963 253.665-604.963h3.427v939.178h128.541z"
        fill="currentColor"
      />
    </svg>
  </span>
</span>
`;

exports[`Logomark component should render white as the default second color 1`] = `
<span
  class="Logomark"
>
  <span
    class="Logomark-inner"
  >
    <svg
      aria-hidden="true"
      class="Logomark-svg"
      viewBox="0 0 2048 2048"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M485.378 1921.317h1078.004v126.796H485.378zM1562.641 253.22v1541.238H485.368V253.227H1562.64zm-153.889 1387.632V406.852H1281.94l-258.81 615.277-258.78-615.277H639.257v1234.001h128.51V705.06l3.447-3.385 251.915 604.963 253.665-604.963h3.427v939.178h128.541z"
        fill="currentColor"
      />
      <path
        d="M767.766 1640.847h-128.51V406.846H764.35l258.78 615.283 258.8-615.283h126.822v1234h-128.54V701.67h-3.428l-253.655 604.97-251.925-604.97-3.448 3.385v935.793z"
        fill="#ffffff"
      />
    </svg>
  </span>
</span>
`;
